# Project_Throtl

./: .dockerignore  .gitignore  Dockerfile  NOTICE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  throtl_metrics.db-shm
docs/chats/: 2026-02-25_session-01_project-setup.md  2026-02-25_session-02_dashboard-improvements.md  2026-02-25_session-03_vllm-scraper-and-storage.md  2026-02-25_session-04_nvml-and-recommendations.md
src/throtl/: __init__.py  main.py  metrics.py
src/throtl/collector/: base.py  gpu_stats.py  mock_collector.py  prometheus_parser.py  vllm_collector.py
src/throtl/dashboard/: terminal.py
src/throtl/engine/: comparison.py  config_advisor.py  recommendations.py
src/throtl/mock/: fake_vllm_server.py  generator.py
src/throtl/storage/: sqlite_store.py
tests/: test_comparison.py  test_config_advisor.py  test_gpu_stats.py  test_mock_generator.py  test_prometheus_parser.py  test_recommendations.py  test_sqlite_store.py  test_vllm_collector.py
