[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "throtl"
version = "0.2.0"
description = "Performance monitoring and tuning for LLM inference servers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "click>=8.1",
]

[project.optional-dependencies]
gpu = ["pynvml>=11.5"]
dev = ["pytest>=7.0"]

[project.scripts]
throtl = "throtl.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
